--- a/achieve.html
+++ b/achieve.html
@@ -23,14 +23,24 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
-                        <a class="nav-link" href="physical.html">My sport</a>
-                        <a class="nav-link" href="cognitive.html">My forte</a>
-                        <a class="nav-link" href="aesthetic.html">My niche</a>
-                        <a class="nav-link active" aria-current="page" href="achieve.html"><i class="fa-solid fa-medal"></i> Achievements</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                    <div class="navbar-nav">
+                                        <a class="nav-link small" href="physical.html">My sport</a>
+                                        <a class="nav-link small" href="cognitive.html">My forte</a>
+                                        <a class="nav-link small" href="aesthetic.html">My niche</a>
+                                        <a class="nav-link active small" href="achieve.html"><i class="fa-solid fa-medal"></i> Achievements</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.26.500</div>
+                        <div class="nav-link">Version: 1.50.500</div>
                     </div>
                 </div>
             </div>
@@ -116,19 +126,31 @@
         </div>
          <div class="container-fluid domain">
             <div class="row">
-                <div class="col">
-                    <a href="index.html" title="I am JK">
-                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"></i> Portfolio</a>
-                    </a>    
+                <div class="row">
+                    <div class="col" title="I am JK">
+                        <a href="index.html">
+                            <i class="fa-solid fa-house"><br>WHO AM I?</i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="portfolio.html">
+                            <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="news.html">
+                            <i class="fa-solid fa-newspaper"><br>NEWS</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="experimental.html">
+                            <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                        </a>    
+                    </div>
                 </div>
                 <div class="col" title="A SPARTAN">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>SPARTAN
+                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>ATHLETE
                     </a>
                 </div>
                 <div class="col" title="A LOGICIAN">
