--- a/aesthetic.html
+++ b/aesthetic.html
@@ -22,18 +22,28 @@
                     <img id="jklogo" src="images/jklogo.png" alt="i am jamie kam" />
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
+                <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
-                        <a class="nav-link" href="physical.html">My sport</a>
-                        <a class="nav-link" href="cognitive.html">My forte</a>
-                        <a class="nav-link active" aria-current="page" href="aesthetic.html"><i class="fa-solid fa-music"></i> My niche</a>
-                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                    <div class="navbar-nav">
+                                        <a class="nav-link small" href="physical.html">My sport</a>
+                                        <a class="nav-link small" href="cognitive.html">My forte</a>
+                                        <a class="nav-link active small" aria-current="page" href="aesthetic.html"><i class="fa-solid fa-headphones-simple"></i> My niche</a>
+                                        <a class="nav-link small" href="achieve.html">Achievements</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.26.500</div>
+                        <div class="nav-link">Version: 1.50.500</div>
                     </div>
                 </div>
             </div>
@@ -95,29 +105,41 @@
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col">
-                    <a href="index.html" title="I am JK">
-                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"></i> Portfolio</a>
-                    </a>    
+                <div class="row">
+                    <div class="col" title="I am JK">
+                        <a href="index.html">
+                            <i class="fa-solid fa-house"><br>WHO AM I?</i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="portfolio.html">
+                            <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="news.html">
+                            <i class="fa-solid fa-newspaper"><br>NEWS</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="experimental.html">
+                            <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                        </a>    
+                    </div>
                 </div>
                 <div class="col" title="A Logician">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>my forte
+                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>LOGICIAN
                     </a>
                 </div>
                 <div class="col" title="A Spartan">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>ATHLETE
                     </a>
                 </div>
                 <div class="col" title="A Student Leader">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>ACHIEVEMENTS
                     </a>
                 </div>
             </div>
