--- a/cognitive.html
+++ b/cognitive.html
@@ -25,14 +25,24 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
-                        <a class="nav-link" href="physical.html">My sport</a>
-                        <a class="nav-link active" aria-current="page" href="cognitive.html"><i class="fa-solid fa-laptop-code"></i> My forte</a>
-                        <a class="nav-link" href="aesthetic.html">My niche</a>
-                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link" href="portfolio.html">Portfolio</a>
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                    <div class="navbar-nav">
+                                        <a class="nav-link small" href="physical.html">My sport</a>
+                                        <a class="nav-link active small" aria-current="page" href="cognitive.html"><i class="fa-solid fa-hourglass"></i> My forte</a>
+                                        <a class="nav-link small" href="aesthetic.html">My niche</a>
+                                        <a class="nav-link small" href="achieve.html">Achievements</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.26.500</div>
+                        <div class="nav-link">Version: 1.50.500</div>
                     </div>
                 </div>
             </div>
@@ -126,51 +136,63 @@
         </div>
         <section class="container-fluid titlebar">
             <div class="centra">
-                <h5 id="chess">Chess</h5>
+                <h5 id="games">Games</h5>
             </div>
         </section>
         <div class="container-fluid main">
             <div class="centra">
-                <h6 style="font-weight:800;">A GAMER and budding CHESSMASTER</h6>
-                    <p>My family believes in spending time playing games together. One of my favourite board game is Chess! It is a game steeped in mathematics! From geometric concepts and coordinates systems to solving mathematical problems. This is because the game is played on an eight-by-eight grid system; a total of 64squares. I am intrigued by the knights tour as well as game theory - a branch of mathematics!</p>
+                <h6 style="font-weight:800;">A GAMER</h6>
+                    <p>Many say excessive gaming is bad for your health. I agree! However, gaming in morderation is certainly good for mental stimulation and relaxing. One of my favourite games would be Shadow of the Tomb Raider Definitive Edition (2019) with another one being StarCraft II (2010) and Age of Empires IV (2021). The games are typically either real time strategy games, or third person shooter games that require thinking. One way or another, I certainly perfer games that requires significant mental stimulation.</p>
                 <div class="row">
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess1.jpg" alt="Chess game with dad">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/STRDE.png" alt="Shadow of the tomb raider definitive edition">
                     </div>
                     <div class="col">
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess3.jpg" alt="Chess game with dad">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/cognitive/SC2.jpeg" alt="StarCraft II (2010) logo">
                     </div>
                     <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/chess2.jpg" alt="Finding patterns in chess">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/cognitive/AOE4.png" alt="Age of Empires IV (2021) logo">
                     </div>
                 </div>
             </div>
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col" title="I am JK">
-                    <a href="index.html">
-                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"></i> Portfolio</a>
-                    </a>    
+                <div class="row">
+                    <div class="col" title="I am JK">
+                        <a href="index.html">
+                            <i class="fa-solid fa-house"><br>WHO AM I?</i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="portfolio.html">
+                            <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="news.html">
+                            <i class="fa-solid fa-newspaper"><br>NEWS</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="experimental.html">
+                            <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                        </a>    
+                    </div>
                 </div>
                 <div class="col" title="A Spartan">
                     <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>my sport
+                        <img class="icon" src="images/icons/spartan.png" alt="Spartan"><br>ATHLETE
                     </a>
                 </div>
                 <div class="col" title="A Violinist">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>my niche
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>VIOLINIST
                     </a>
                 </div>
                 <div class="col" title="A Student Leader">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>ACHIEVEMENTS
                     </a>
                 </div>
             </div>
