--- a/experimental.html
+++ b/experimental.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
+        <title>Experimental</title>
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
@@ -24,10 +24,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                         <a class="nav-link" href="news.html">News</a>
-                        <a class="nav-link" href="experimental.html">Experimental</a> 
+                        <a class="nav-link active" aria-current="page" href="experimental.html"><i class="fa-solid fa-flask"></i>Experimental</a> 
                         <div class="nav-link">================</div> 
                         <div class="nav-link">Version: 1.50.500</div>
                     </div>
@@ -36,11 +36,22 @@
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
-                <h1 class="topper display-1">Who Am I?</h1>
+                <h1 class="topper display-1">News</h1>
                 <blockquote class="blockquote text-center quotes">
-                    <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
-                    <footer class="blockquote-footer footer"><em> Aristotle</em></footer>
+                    <p class="mb-0">"No amount of experimentation can ever prove me right; a single experiment can prove me wrong."</p>
+                    <footer class="blockquote-footer footer"><em>Albert Einstein</em></footer>
                 </blockquote>
+            </div>
+        </div>
+        <nav class="container-fluid navbar">
+            <div class="centra">
+                <h5 id="achieve">Experimental: </h5>
+            </div>
+        </nav>
+        <div class="container-fluid main">
+            <div class="centra">
+                <hr>
+                <p>29/4/2022<br><br>Initialization</p>
             </div>
         </div>
         <div class="container-fluid domain">
@@ -67,9 +78,6 @@
                 </div>
             </div>
         </div>
-       
-    <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap.js"></script>
+        <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
     </body>
 </html>
