--- a/physical.html
+++ b/physical.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>A Spartan Kid</title>
+        <title>An Athlete</title>
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
@@ -26,67 +26,35 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link"href="index.html">Home</a>
-                        <a class="nav-link" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
-                        <a class="nav-link active" aria-current="page" href="physical.html"><i class="fa-solid fa-person-biking"></i> My sport</a>
-                        <a class="nav-link" href="cognitive.html">My forte</a>
-                        <a class="nav-link" href="aesthetic.html">My niche</a>
-                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link active" href="portfolio.html">Portfolio</a>
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                    <div class="navbar-nav">
+                                        <a class="nav-link active small" aria-current="page" href="physical.html"><i class="fa-solid fa-person-biking"></i> My sport</a>
+                                        <a class="nav-link small" href="cognitive.html">My forte</a>
+                                        <a class="nav-link small" href="aesthetic.html">My niche</a>
+                                        <a class="nav-link small" href="achieve.html">Achievements</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.26.500</div>
+                        <div class="nav-link">Version: 1.50.500</div>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
-                <h1 class="topper display-4">I AM ... A SPARTAN KID</h1>
+                <h1 class="topper display-4">I AM ... AN ATHLETE</h1>
                 <blockquote class="blockquote quotes">
                     <p class="mb-0">"It is exercise alone that supports the spirit and keeps the mind in vigor"</p>
                         <footer class="blockquote-footer footer"><em>Cicero</em></footer>
                 </blockquote>
-            </div>
-        </div>    
-        <div class="container-fluid main">
-            <div class="justify-content-center centra">
-                <p>The ancient civilisation of Sparta practices the tradition where all children of Sparta are responsible to serve its government. For that purpose alone, a child of Sparta needs to be strong and a fast learner just to survive. The Spartan government prides strength, power and mental capability to bring their civilisation to new heights.</p>
-                <hr>
-                <h4>THE SPARTAN KIDS CODE</h4>
-                <ul>
-                    <li>A Spartan thinks positively and is resilient through adversity</li>
-                    <li>A Spartan helps others and asks for help when they need it</li>
-                    <li>A Spartan understands that eating a healthy diet and exercising often keeps our bodies strong</li>
-                    <li>A Spartan gets rest to help their bodies recover and grow</li>
-                    <li>A Spartan understands their current abilities</li>
-                    <li>A Spartan sets new goals to be the best that they can be</li>
-                </ul>
-                <hr>
-            </div>
-            <div class="container-fluid centra">
-                <div class="row">
-                    <div class="col">    
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/ican.jpg" alt="I'll show you that I Can">
-                    </div>
-                    <div class="col">
-                        <video class="mx-auto d-block vids" width="320" controls>
-                            <source src="videos/spartan.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/excel.jpg" alt="Excellence is an Attitude">
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/sw5k.jpg" alt="Star Wars 5KM">
-                    </div>
-                    <div class="col">
-                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/physical/3spartan.jpg" alt="Spartan Kids">
-                    </div>
-                    <div class="col">
-                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/rc.jpg" alt="Spider Boy">
-                    </div>
-                </div>
             </div>
         </div>
         <section class="container-fluid titlebar">
@@ -106,7 +74,7 @@
         <div class="container-fluid main">
             <div class="centra">
                 <h6 style="font-weight:800;">Year 2022</h6>
-                    <p>With the countinous easing of restrictions significantly increasing the sports I could try, I was excited to try new sports. From water sports like Paddleboarding to team-based or individual-based Tennis, I am sure that this year will be amazing.</p>
+                    <p>With the countinous easing of restrictions significantly increasing the sports I could try, I was excited. I started training in Tennis and whenever allowed tried paddleboarding. This year was also the year of my third National Physical Fitness Assesment (NAPFA) and hence had to train in running, namely endurance training of running a full 2.4km without stopping.</p>
                 <hr>
                 <h6 style="font-weight:800;">Year 2021</h6>
                     <p>The easing of restrictions significantly increased the sports I could try. Although I will be sitting for my Primary Six Leaving Examination, I alway make sure to get enough exercise. </p>
@@ -120,32 +88,66 @@
                 <h6 style="font-weight:800;">Year 2018</h6>
                     <p>I started training in Brazilian Jiu Jitsu (BJJ) as a form of fitness and self defence on top of swimming. I've come to appreaciate that both of these are lifeskills for survival. My most crucial take away from BJJ are the values of compassion, bravery, honesty and humility; values which forms the ethics and moral code of this martial art form.  </p>
             </div>
+        </div>    
+            <div class="container-fluid centra">
+                <div class="row">
+                    <div class="col">    
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/ican.jpg" alt="I'll show you that I Can">
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/excel.jpg" alt="Excellence is an Attitude">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/sw5k.jpg" alt="Star Wars 5KM">
+                    </div>
+                    <div class="col">
+                        <img class="photoH rounded mx-auto d-block img-thumbnail" src="images/physical/3spartan.jpg" alt="Spartan Kids">
+                    </div>
+                    <div class="col">
+                        <img class="photoV rounded mx-auto d-block img-thumbnail" src="images/physical/rc.jpg" alt="Spider Boy">
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container-fluid domain">
             <div class="row">
-                <div class="col" title="I am JK">
-                    <a href="index.html">
-                        <i class="fa-solid fa-house"><br>WHO AM I?</i>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"></i> Portfolio</a>
-                    </a>    
+                <div class="row">
+                    <div class="col" title="I am JK">
+                        <a href="index.html">
+                            <i class="fa-solid fa-house"><br>WHO AM I?</i>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="portfolio.html">
+                            <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="news.html">
+                            <i class="fa-solid fa-newspaper"><br>NEWS</i>
+                        </a>    
+                    </div>
+                    <div class="col">
+                        <a href="experimental.html">
+                            <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                        </a>    
+                    </div>
                 </div>
                 <div class="col" title="A Logician">
                     <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>My forte
+                        <img class="icon" src="images/icons/logician.png" alt="Logician"><br>LOGICIAN
                     </a>
                 </div>
                 <div class="col" title="A Violinist">
                     <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>My niche
+                        <img class="icon" src="images/icons/violin.png" alt="Violinist"><br>VIOLINIST
                     </a>
                 </div>
                 <div class="col" title="A Student Leader">
                     <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>Achievements
+                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>ACHIEVEMENTS
                     </a>
                 </div>
             </div>
