--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Who Am I?</title>
+        <title>Portfolio</title>
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
@@ -25,23 +25,33 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link" href="index.html">Home</a>
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
-                        <a class="nav-link" href="physical.html">My sport</a>
-                        <a class="nav-link" href="cognitive.html">My forte</a>
-                        <a class="nav-link" href="aesthetic.html">My niche</a>
-                        <a class="nav-link" href="achieve.html">Achievements</a>
+                        <a class="nav-link active" aria-current="page" href="portfolio.html"><i class="fa-solid fa-pager"></i> Portfolio</a>
+                        <nav class="navbar navbar-expand-lg navbar-light">
+                            <div class="container-fluid">
+                                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                                    <div class="navbar-nav">
+                                        <a class="nav-link small" href="physical.html">My sport</a>
+                                        <a class="nav-link small" href="cognitive.html">My forte</a>
+                                        <a class="nav-link small" href="aesthetic.html">My niche</a>
+                                        <a class="nav-link small" href="achieve.html">Achievements</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </nav>
+                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.26.500</div>
+                        <div class="nav-link">Version: 1.50.500</div>
                     </div>
                 </div>
             </div>
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
-                <h1 class="topper display-1">Who Am I?</h1>
+                <h1 class="topper display-1">My Portfolio</h1>
                 <blockquote class="blockquote text-center quotes">
-                    <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
-                    <footer class="blockquote-footer footer"><em> Aristotle</em></footer>
+                    <p class="mb-0">"Portfolios are everything, promises are nothing. Do the work"</p>
+                    <footer class="blockquote-footer footer"><em>Chase Jarvis</em></footer>
                 </blockquote>
             </div>
         </div>
@@ -54,28 +64,18 @@
                 </div>
                 <div class="col">
                     <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"></i> Portfolio</a>
+                        <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
                     </a>    
                 </div>
-                <div class="col" title="A SPARTAN">
-                    <a href="physical.html">
-                        <img class="icon" src="images/icons/spartan.png" alt="A Spartan"><br>My sport
-                    </a>
+                <div class="col">
+                    <a href="news.html">
+                        <i class="fa-solid fa-newspaper"><br>NEWS</i>
+                    </a>    
                 </div>
-                <div class="col" title="A LOGICIAN">
-                    <a href="cognitive.html">
-                        <img class="icon" src="images/icons/logician.png" alt="A Logician"><br>My forte
-                    </a>
-                </div>
-                <div class="col" title="A MUSICIAN">
-                    <a href="aesthetic.html">
-                        <img class="icon" src="images/icons/violin.png" alt="A Musician"><br>My niche
-                    </a>
-                </div>
-                <div class="col" title="A LEADER">
-                    <a href="achieve.html">
-                        <img class="icon" src="images/icons/achieve.png" alt="A Leader"><br>Achievements
-                    </a>
+                <div class="col">
+                    <a href="experimental.html">
+                        <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                    </a>    
                 </div>
             </div>
         </div>
