--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
+        <title>News</title>
         <meta name="description" content="JK's Portfolio">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css2?family=Eczar&family=Montserrat&display=swap" rel="stylesheet"> 
@@ -24,9 +24,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html"><i class="fa-solid fa-house"></i> Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
-                        <a class="nav-link" href="news.html">News</a>
+                        <a class="nav-link active" aria-current="page" href="news.html"><i class="fa-solid fa-newspaper"></i> News</a>
                         <a class="nav-link" href="experimental.html">Experimental</a> 
                         <div class="nav-link">================</div> 
                         <div class="nav-link">Version: 1.50.500</div>
@@ -36,11 +36,22 @@
         </nav>
         <div class="jumbotron jumbotron-fluid intro">
             <div class="container intro">
-                <h1 class="topper display-1">Who Am I?</h1>
+                <h1 class="topper display-1">News</h1>
                 <blockquote class="blockquote text-center quotes">
-                    <p class="mb-0">"Knowing yourself is the begining of all wisdom"</p>
-                    <footer class="blockquote-footer footer"><em> Aristotle</em></footer>
+                    <p class="mb-0">"Bad news travels fast. Good news takes the scenic route."</p>
+                    <footer class="blockquote-footer footer"><em>Doug Larson</em></footer>
                 </blockquote>
+            </div>
+        </div>
+        <nav class="container-fluid navbar">
+            <div class="centra">
+                <h5 id="achieve">Updates: </h5>
+            </div>
+        </nav>
+        <div class="container-fluid main">
+            <div class="centra">
+                <hr>
+                <p>29/4/2022<br><br>Initialization</p>
             </div>
         </div>
         <div class="container-fluid domain">
@@ -52,24 +63,16 @@
                 </div>
                 <div class="col">
                     <a href="portfolio.html">
-                        <i class="fa-solid fa-pager"><br>PORTFOLIO</i>
+                        <i class="fa-solid fa-pager"></i> PORTFOLIO</a>
                     </a>    
                 </div>
                 <div class="col">
                     <a href="news.html">
-                        <i class="fa-solid fa-newspaper"><br>NEWS</i>
-                    </a>    
-                </div>
-                <div class="col">
-                    <a href="experimental.html">
-                        <i class="fa-solid fa-flask"><br>EXPERIMENTAL</i>
+                        <i class="fa-solid fa-newspaper"></i> NEWS</a>
                     </a>    
                 </div>
             </div>
         </div>
-       
-    <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
-    <script src="assets/js/jquery.js"></script>
-    <script src="assets/js/bootstrap.js"></script>
+        <footer class="intro footer"> Copyright &copy; 2022 JKWEBSITE. All rights reserved.</footer>
     </body>
 </html>
