--- a/news.html
+++ b/news.html
@@ -27,9 +27,9 @@
                         <a class="nav-link" href="index.html">Home</a>
                         <a class="nav-link" href="portfolio.html">Portfolio</a>
                         <a class="nav-link active" aria-current="page" href="news.html"><i class="fa-solid fa-newspaper"></i> News</a>
-                        <a class="nav-link" href="experimental.html">Experimental</a> 
+
                         <div class="nav-link">================</div> 
-                        <div class="nav-link">Version: 1.50.500</div>
+                        <div class="nav-link">Version: 1.51.500</div>
                     </div>
                 </div>
             </div>
@@ -43,15 +43,11 @@
                 </blockquote>
             </div>
         </div>
-        <nav class="container-fluid navbar">
-            <div class="centra">
-                <h5 id="achieve">Updates: </h5>
-            </div>
-        </nav>
         <div class="container-fluid main">
             <div class="centra">
+                <a href="https://channelnewsasia.com" target="_blank"> <i class="fa-solid fa-radio"> Breaking news, Singapore news, World and Asia (CNA)</i> </a>
                 <hr>
-                <p>29/4/2022<br><br>Initialization</p>
+                <a href="https://edition.cnn.com" target="_blank"> <i class="fa-solid fa-rss"> Breaking news, US news, World news and video (CNN)</i></a>
             </div>
         </div>
         <div class="container-fluid domain">
